[tool.poetry]
name = "chatvitus"
version = "0.1.0"
description = ""
authors = ["DELL <yagneshsanku25@gmail.com>"]
readme = "README.md"
packages = [{include = "chatvitus"}]

[tool.poetry.dependencies]
python = ">=3.9"
flask = ">=3.1.0,<4.0.0"
python-levenshtein = "^0.26.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
